# 3D-Render

./: .gitignore  CMakeLists.txt
src/: Main.cpp
src/ray_tracing/: color.h  main.cpp  ray.h  vec3.h
